--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Compiled class file
 *.class
-
+build
+.gradle
+.idea
 # Log file
 *.log
+
 
 # BlueJ files
 *.ctxt
@@ -18,6 +21,7 @@
 *.zip
 *.tar.gz
 *.rar
+*.DS_Store
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
